style: 오픈그래프 추가

--- a/fe/public/index.html
+++ b/fe/public/index.html
@@ -9,6 +9,17 @@
       name="description"
       content="Website that creates generational unity through life stories"
     />
+    <!-- open graph -->
+    <meta property="og:url" content="https://cherry-pick.co.kr/" />
+    <meta property="og:title" content="CoGen" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/opengraph_img.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      property="og:description"
+      content="연령을 뛰어넘는 이해와 소통의 공간, CoGen"
+    />
     <title>CoGen</title>
   </head>
   <body>
