--- a/fe/public/index.html
+++ b/fe/public/index.html
@@ -10,7 +10,7 @@
       content="Website that creates generational unity through life stories"
     />
     <!-- open graph -->
-    <meta property="og:url" content="https://www.akkkiri.co.kr/" />
+    <meta property="og:url" content="https://akkkiri.co.kr/" />
     <meta property="og:title" content="CoGen" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="%PUBLIC_URL%/images/opengraph_img.png" />
